--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ profile
 # Ignore leftovers from other SCM systems:
 CVS
 .svn
+FieldLines.xcodeproj/project.xcworkspace/xcuserdata
+FieldLines.xcodeproj/xcuserdata
